fix:windows scrollbar

--- a/project/src/index.css
+++ b/project/src/index.css
@@ -421,6 +421,10 @@ textarea {
   ;
 }
 
+::-webkit-scrollbar {
+  display: none;
+}
+
 .horigrid::-webkit-scrollbar {
   display: none;
 }
